--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>tetris</title>
 </head>
 <body>
+    <div id="score"></div>
+    <div id="lines"></div>
+    <div id="level"></div>
     <canvas id="tetris" width="200" height="400"></canvas>
 
     <script src="js/tetris.js"></script>
