--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="score"></div>
     <div id="lines"></div>
     <div id="level"></div>
+    <canvas id="nextpiece" width="100" height="100"></canvas>
     <canvas id="tetris" width="200" height="400"></canvas>
 
     <script src="js/tetris.js"></script>
